# MCVO

./: README.md
MCVO/: CMakeLists.txt  package.xml
MCVO/config/: create_mask.py  violoam.rviz
MCVO/config/KITTI360/: KITTI360.yaml
MCVO/config/KITTI360/cameras/: camera_00.yaml  camera_01.yaml  camera_02.yaml
MCVO/config/M2DGR/: M2DGR.yaml
MCVO/config/M2DGR/cameras/: camera_00.yaml  camera_01.yaml  camera_02.yaml  camera_03.yaml  camera_04.yaml  camera_05.yaml
MCVO/config/MCVO/: MCVO_estimator.yaml  MCVO_frontend_lidar.yaml
MCVO/config/MCVO/ugv/: camera_1.yaml  cmu_rc2_cam1_debug.yaml
MCVO/config/MCdata/: MCdata_NOV_Ground.yaml  MCdata_NOV_Lab.yaml  MCdata_NOV_Lab1.yaml  MCdata_copy.yaml
MCVO/config/MCdata/cameras/: camera_00.yaml  camera_01.yaml  camera_02.yaml  camera_03.yaml  camera_04.yaml  camera_05.yaml  camera_06.yaml
MCVO/config/NCLT/: NCLT.yaml
MCVO/config/NCLT/cameras/: camera_00.yaml  camera_01.yaml  camera_02.yaml  camera_03.yaml  camera_04.yaml  camera_05.yaml
MCVO/config/champ/: NVIDIA_ISAAC_cam.yaml  champ_estimator.yaml  champ_view.rviz
MCVO/config/hilti_challange/: hilti_challange.yaml  hilti_view.rviz
MCVO/config/hilti_challange/cameras/: cam0.yaml  cam1.yaml  cam2.yaml  cam3.yaml  cam4.yaml
MCVO/config/realsense/: velodyne16_cmu_drone.yaml  velodyne16_cmu_drone_latest.yaml  velodyne16_color.yaml
MCVO/config/uav360/: uav360.yaml
MCVO/config/uav360/cameras/: camera_00.yaml  camera_01.yaml  camera_02.yaml  camera_03.yaml
MCVO/config/ugv/: .rc_car_cam1.yaml.swp  cmu_rc1_cam1.yaml  cmu_rc1_cam1_debug.yaml  cmu_rc1_cam1_half_imagesize.yaml  cmu_rc2_cam1_debug.yaml  cmu_rc2_cam1_half_imagesize.yaml  cmu_sp1_cam1.yaml  cmu_sp1_cam1_half_imagesize.yaml  mmpug_rc1_cam1_half_imagesize.yaml  mono1_config.yaml  multiVIO.yaml
MCVO/launch/: KITTI360.launch  KITTI360.rviz  M2DGR.launch  MCVO_VIEW.rviz  MCVO_estimator.launch  MCVO_frontend.launch  MCdata.launch  MCdata.rviz  NCLT.launch  hilti_view.rviz
MCVO/launch/champ/: champ_estimator.launch
MCVO/launch/hilti_challange/: hilti_challange.launch
MCVO/src/: MCVOestimator_node.cpp  test_main.cpp
MCVO/src/Estimator/: MCVOestimator.cpp  MCVOestimator.h  MCVOfeature_manager.cpp  MCVOfeature_manager.h  parameters.cpp  parameters.h
MCVO/src/Estimator/factor/: marginalization_factor.cpp  projection_factor.cpp  projection_mc_factor.cpp  projection_mc_factor.h
MCVO/src/Estimator/initial/: alignment_factor.cpp  alignment_factor.h  initial_aligment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
MCVO/src/Frontend/: MCVOfrontend.cpp  MCVOfrontend.h  MCVOfrontend_data.h  lidar.cpp  sensors.h
MCVO/src/Frontend/feature_tracker/: ORBfeature_tracker.cpp  ORBfeature_tracker.h  SPHORBfeature_tracker.cpp  SPHORBfeature_tracker.h  Superpoint_tracker.cpp  Superpoint_tracker.h  feature_tracker.cpp  feature_tracker.h  trackerbase.cpp  trackerbase.h  vpi_feature_tracker.cpp  vpi_feature_tracker.h
MCVO/src/Frontend/feature_tracker/ORBextractor/: ORBextractor.cc  ORBextractor.h
MCVO/src/Frontend/feature_tracker/SPHORB/: SPHORB.cpp  detector.cpp  nonmax.cpp  pfm.cpp  utility.cpp
MCVO/src/Frontend/feature_tracker/SPHORB/include/: SPHORB.h  detector.h  utility.h
MCVO/src/Frontend/feature_tracker/super_include/: SuperGlue.cpp  SuperGlue.hpp  SuperPoint.cpp
MCVO/src/utility/: visualization.cpp  visualization.h
camera_model/src/camera_models/: CataCamera.cc  ScaramuzzaCamera.cc
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
